--- a/index.html
+++ b/index.html
@@ -42,20 +42,75 @@
     <div class="TextDivBG"></div>
   </div>
   
-  <div class="StoryDiv">
-    <div class="BGdiv">
-       <img class="StoryBG" src="res/LostBeltOne/Anastasia_map.webp">
-       <img class="StoryCharacter" src="res/LostBeltOne/Master.png">
-       <img class="StoryLogo" src="res/LostBeltOne/Logo.webp">
-    </div>
-    <div class="TextDiv">
-      <div class="TitleTextDiv">Anastasia</div>
-      <p style="margin-top:2%">
-        Lorem ipsum dolor sit amet. Non iure voluptatibus cum consectetur internos ea rerum corporis qui itaque adipisci est eaque optio. Vel odio voluptatem in sunt quisquam est omnis sunt ad nostrum provident a galisum nihil. Rem laborum fugit eum culpa facere qui velit quos est itaque voluptatem qui deserunt aliquam. </p>
-      <div class="TextButtonDiv"></div>
-    </div>
+  <div class="BannerStoryDiv" style="animation: bannerMove 30s infinite linear"></div>
+    <!--Tout les Lostbelt-->
+    <div class="allLostBelt">
+      <!--1er Lostbelt-->
+      <div class="StoryDiv">
+        <div class="BGdiv">
+          <img class="StoryBG" src="res/LostBeltOne/Anastasia_map.webp">
+          <img class="StoryCharacter" src="res/LostBeltOne/Master.png">
+          <img class="StoryLogo" src="res/LostBeltOne/Logo.webp">
+        </div>
+        <div class="TextDiv">
+          <div class="TitleTextDiv">Anastasia</div>
+          <p style="margin-top:2%">
+            Lorem ipsum dolor sit amet. Non iure voluptatibus cum consectetur internos ea rerum corporis qui itaque adipisci est eaque optio. Vel odio voluptatem in sunt quisquam est omnis sunt ad nostrum provident a galisum nihil. Rem laborum fugit eum culpa facere qui velit quos est itaque voluptatem qui deserunt aliquam. </p>
+          <div class="TextButtonDiv"></div>
+        </div>
+        <div class="rightButtonStory"></div>
+        <div class="leftButtonStory"></div>
+      </div>
+      <!--2ème Lostbelt-->
+      <div class="StoryDiv">
+        <div class="BGdiv">
+          <img class="StoryBG" src="res/LostBeltTwo/Map.webp">
+          <img class="StoryCharacter" src="res/LostBeltTwo/Master.webp">
+          <img class="StoryLogo" src="res/LostBeltTwo/Logo.webp">
+        </div>
+        <div class="TextDiv">
+          <div class="TitleTextDiv" style="font-size:0.7em">Götterdämmerung</div>
+          <p style="margin-top:2%">
+            Lorem ipsum dolor sit amet. Non iure voluptatibus cum consectetur internos ea rerum corporis qui itaque adipisci est eaque optio. Vel odio voluptatem in sunt quisquam est omnis sunt ad nostrum provident a galisum nihil. Rem laborum fugit eum culpa facere qui velit quos est itaque voluptatem qui deserunt aliquam. </p>
+          <div class="TextButtonDiv"></div>
+        </div>
+        <div class="rightButtonStory"></div>
+        <div class="leftButtonStory"></div>
+      </div>
+      <!--3ème Lostbelt-->
+      <div class="StoryDiv">
+        <div class="BGdiv">
+          <img class="StoryBG" src="res/LostBeltThree/Map.webp">
+          <img class="StoryCharacter" src="res/LostBeltThree/Master.webp">
+          <img class="StoryLogo" src="res/LostBeltThree/Logo.webp">
+        </div>
+        <div class="TextDiv">
+          <div class="TitleTextDiv">S I N</div>
+          <p style="margin-top:2%">
+            Lorem ipsum dolor sit amet. Non iure voluptatibus cum consectetur internos ea rerum corporis qui itaque adipisci est eaque optio. Vel odio voluptatem in sunt quisquam est omnis sunt ad nostrum provident a galisum nihil. Rem laborum fugit eum culpa facere qui velit quos est itaque voluptatem qui deserunt aliquam. </p>
+          <div class="TextButtonDiv"></div>
+        </div>
+        <div class="rightButtonStory"></div>
+        <div class="leftButtonStory"></div>
+      </div>
+      <!--4ème Lostbelt-->
+      <div class="StoryDiv">
+        <div class="BGdiv">
+          <img class="StoryBG" src="res/LostBeltFour/Map.webp">
+          <img class="StoryCharacter" src="res/LostBeltFour/Master.webp">
+          <img class="StoryLogo" src="res/LostBeltFour/Logo.webp">
+        </div>
+        <div class="TextDiv">
+          <div class="TitleTextDiv">Yugakshetra</div>
+          <p style="margin-top:2%">
+            Lorem ipsum dolor sit amet. Non iure voluptatibus cum consectetur internos ea rerum corporis qui itaque adipisci est eaque optio. Vel odio voluptatem in sunt quisquam est omnis sunt ad nostrum provident a galisum nihil. Rem laborum fugit eum culpa facere qui velit quos est itaque voluptatem qui deserunt aliquam. </p>
+          <div class="TextButtonDiv"></div>
+        </div>
+        <div class="rightButtonStory"></div>
+        <div class="leftButtonStory"></div>
+      </div>
+    <script src="JS/story.js"></script>
+  <!-- Fin de Tout les Lostbelt-->  
   </div>
-
-  </div>
-
+  <div class="BannerStoryDiv" style="animation: bannerMove 30s infinite linear reverse "></div>
 </body>
