--- a/index.html
+++ b/index.html
@@ -41,8 +41,34 @@
     </div>
     <div class="TextDivBG"></div>
   </div>
-  
-  <div class="BannerStoryDiv" style="animation: bannerMove 30s infinite linear"></div>
+  <div class="bannerSlide">
+    <div class="BannerDiv">
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgOne.png')"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgTwo.png'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgThree.png'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgFour.png'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgFive.png')"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgSix.png')"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgSeven.png')"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgEight.jpg'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgNine.jpg'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgTen.jpg'); background-position:top"></div>
+    </div>
+    <div class="BannerDiv">
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgOne.png')"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgTwo.png'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgThree.png'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgFour.png'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgFive.png')"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgSix.png')"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgSeven.png')"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgEight.jpg'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgNine.jpg'); background-position:top"></div>
+      <div class="bannerImage" style="--url:url('../res/BannerImg/ImgTen.jpg'); background-position:top"></div>
+    </div>
+  </div>
+  </div>
+  <!--<div class="BannerStoryDiv" style="animation: bannerMove 30s infinite linear"></div>-->
     <!--Tout les Lostbelt-->
     <div class="allLostBelt">
       <!--1er Lostbelt-->
@@ -112,5 +138,5 @@
     <script src="JS/story.js"></script>
   <!-- Fin de Tout les Lostbelt-->  
   </div>
-  <div class="BannerStoryDiv" style="animation: bannerMove 30s infinite linear reverse "></div>
+  <!--<div class="BannerStoryDiv" style="animation: bannerMove 30s infinite linear reverse "></div>-->
 </body>
