Shadow BG LostBelt

--- a/index.html
+++ b/index.html
@@ -17,21 +17,17 @@
   <link rel="stylesheet" href="CSS/headbar.css">
   <link rel="stylesheet" href="CSS/content.css">
   <link rel="stylesheet" href="CSS/story.css">
-
-
 </head>
-
+<body>
 <header>
     <div class="headbarDiv"> 
         <div class="Button" style="--txt:'Story'"></div>
         <div class="Button" style="--txt:'Hightlights'"></div>
-        <img style="height: 100%" src="res/FateLOGO.webp">
+        <img style="height: 100%" src="res/FateLOGO.webp" alt="LOGOfateGO">
         <div class="Button" style="--txt:'BGM'"></div>
         <div class="Button" style="--txt:'Servants'"></div>
     </div>
 </header>
-
-<body>
   <div class="AcceuilDiv">
     <div class="TextDiv">
       <div class="TitleTextDiv">Mouri Medinari</div>
@@ -67,16 +63,13 @@
       <div class="bannerImage" style="--url:url('../res/BannerImg/ImgTen.jpg'); background-position:top"></div>
     </div>
   </div>
-  </div>
-  <!--<div class="BannerStoryDiv" style="animation: bannerMove 30s infinite linear"></div>-->
     <!--Tout les Lostbelt-->
     <div class="allLostBelt">
       <!--1er Lostbelt-->
-      <div class="StoryDiv">
+      <div class="StoryDiv" style="--BG:url('../res/LostBeltOne/Anastasia_map.webp')">
         <div class="BGdiv">
-          <img class="StoryBG" src="res/LostBeltOne/Anastasia_map.webp">
-          <img class="StoryCharacter" src="res/LostBeltOne/Master.png">
-          <img class="StoryLogo" src="res/LostBeltOne/Logo.webp">
+          <img class="StoryCharacter" src="res/LostBeltOne/Master.png" style="filter: drop-shadow(0px 0px 10px #8bcaf1);" alt="Master 1er Lostbelt">
+          <img class="StoryLogo" src="res/LostBeltOne/Logo.webp" alt="Logo 1er Lostbelt">
         </div>
         <div class="TextDiv">
           <div class="TitleTextDiv">Anastasia</div>
@@ -88,11 +81,10 @@
         <div class="leftButtonStory"></div>
       </div>
       <!--2ème Lostbelt-->
-      <div class="StoryDiv">
+      <div class="StoryDiv" style="--BG:url('../res/LostBeltTwo/Map.webp')">
         <div class="BGdiv">
-          <img class="StoryBG" src="res/LostBeltTwo/Map.webp">
-          <img class="StoryCharacter" src="res/LostBeltTwo/Master.webp">
-          <img class="StoryLogo" src="res/LostBeltTwo/Logo.webp">
+          <img class="StoryCharacter" src="res/LostBeltTwo/Master.webp" style="filter: drop-shadow(0px 0px 10px #1871a9);" alt="Master 2eme Lostbelt">
+          <img class="StoryLogo" src="res/LostBeltTwo/Logo.webp" alt="Logo 2eme Lostbelt">
         </div>
         <div class="TextDiv">
           <div class="TitleTextDiv" style="font-size:0.7em">Götterdämmerung</div>
@@ -104,11 +96,10 @@
         <div class="leftButtonStory"></div>
       </div>
       <!--3ème Lostbelt-->
-      <div class="StoryDiv">
+      <div class="StoryDiv" style="--BG:url('../res/LostBeltThree/Map.webp')">
         <div class="BGdiv">
-          <img class="StoryBG" src="res/LostBeltThree/Map.webp">
-          <img class="StoryCharacter" src="res/LostBeltThree/Master.webp">
-          <img class="StoryLogo" src="res/LostBeltThree/Logo.webp">
+          <img class="StoryCharacter" src="res/LostBeltThree/Master.webp" style="filter: drop-shadow(0px 0px 10px #e6d37c);" alt="Master 3eme Lostbelt">
+          <img class="StoryLogo" src="res/LostBeltThree/Logo.webp" alt="Logo 3eme Lostbelt">
         </div>
         <div class="TextDiv">
           <div class="TitleTextDiv">S I N</div>
@@ -120,11 +111,10 @@
         <div class="leftButtonStory"></div>
       </div>
       <!--4ème Lostbelt-->
-      <div class="StoryDiv">
+      <div class="StoryDiv" style="--BG:url('../res/LostBeltFour/Map.webp')">
         <div class="BGdiv">
-          <img class="StoryBG" src="res/LostBeltFour/Map.webp">
-          <img class="StoryCharacter" src="res/LostBeltFour/Master.webp">
-          <img class="StoryLogo" src="res/LostBeltFour/Logo.webp">
+          <img class="StoryCharacter" src="res/LostBeltFour/Master.webp" style="filter: drop-shadow(0px 0px 10px #1c4810);" alt="Master 4eme Lostbelt">
+          <img class="StoryLogo" src="res/LostBeltFour/Logo.webp" alt="Logo 4eme Lostbelt">
         </div>
         <div class="TextDiv">
           <div class="TitleTextDiv">Yugakshetra</div>
